--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preinstall": "node scripts/npm-preinstall-canary.js"
   },
   "dependencies": {
-    "axios": "^1.12.2"
+    "axios": "^1.12.2",
+    "dompurify": "^3.3.1"
   }
 }
